--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,4 +44,5 @@
     "gh-pages": "^6.3.0"
   },
   "homepage": "https://angg3ll.github.io/healthAIHack"
+
 }
